--- a/001-roman-numerals-converter/cfn-template.yml
+++ b/001-roman-numerals-converter/cfn-template.yml
@@ -39,9 +39,9 @@ Resources:
           yum update -y
           yum install python3 -y
           pip3 install flask
-          wget -P templates index.html
-          wget -P templates result.html
-          wget app.py
+          wget -P templates https://raw.githubusercontent.com/bluehackrafestefano/clarusway-aws-workshop/master/001-roman-numerals-converter/templates/index.html
+          wget -P templates https://raw.githubusercontent.com/bluehackrafestefano/clarusway-aws-workshop/master/001-roman-numerals-converter/templates/result.html
+          wget https://raw.githubusercontent.com/bluehackrafestefano/clarusway-aws-workshop/master/001-roman-numerals-converter/app.py
           python3 app.py
 
 Outputs:
